--- a/angular.json
+++ b/angular.json
@@ -69,6 +69,9 @@
               "buildTarget": "inkocherencja:build:development"
             }
           },
+          "options": {
+             "port": 61934
+          },
           "defaultConfiguration": "development"
         },
         "extract-i18n": {
