--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,10 @@
               "src/styles.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.css",
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
-              "node_modules/primeng/resources/primeng.min.css"
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/quill/dist/quill.core.css",
+              "node_modules/quill/dist/quill.snow.css",
+              "node_modules/quill/dist/quill.bubble.css"
             ],
             "scripts": [],
             "browser": "src/main.ts"
