--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^18.0.6",
     "@angular/router": "^18.0.6",
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "@types/node": "^22.13.4",
     "ngx-simple-text-editor": "^5.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.3",
@@ -30,7 +31,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.0.7",
-    "@angular/cli": "~18.0.7",
+    "@angular/cli": "^19.1.7",
     "@angular/compiler-cli": "^18.0.6",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
