--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser-dynamic": "^19.2.14",
     "@angular/router": "^19.2.14",
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "@primeng/themes": "^20.0.1",
     "@types/node": "^22.13.4",
     "ngx-simple-text-editor": "^5.0.0",
+    "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^19.1.4",
     "quill": "^2.0.2",
