--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser-dynamic": "^19.2.14",
     "@angular/router": "^19.2.14",
     "@fortawesome/fontawesome-free": "^6.5.2",
-    "@primeng/themes": "^20.0.1",
+    "@primeuix/styled": "^0.7.2",
+    "@primeuix/themes": "^1.2.3",
+    "@primeuix/utils": "^0.6.1",
     "@types/node": "^22.13.4",
     "ngx-simple-text-editor": "^5.0.0",
     "primeflex": "^4.0.0",
