Added the highlight.js dependency.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@primeuix/themes": "^1.2.3",
     "@primeuix/utils": "^0.6.1",
     "@types/node": "^22.13.4",
+    "highlight.js": "^11.11.1",
+    "highlightjs-copy": "^1.0.6",
+    "ngx-highlightjs": "^14.0.1",
     "ngx-simple-text-editor": "^5.0.0",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
