Added a code block highlighter with a possibility to copy the code via a button.

--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,8 @@
               "node_modules/@fortawesome/fontawesome-free/css/all.css",
               "node_modules/quill/dist/quill.core.css",
               "node_modules/quill/dist/quill.snow.css",
-              "node_modules/quill/dist/quill.bubble.css"
+              "node_modules/quill/dist/quill.bubble.css",
+              "node_modules/highlight.js/styles/github-dark.css"
             ],
             "scripts": [],
             "browser": "src/main.ts"
